--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "inquirer": "^9.2.12",
     "puppeteer": "^21.6.1"
   },
   "name": "src",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
